# sonion

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  Editor.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/motion-runtime/: README.md  xype_motion.vpy
src-tauri/src/: lib.rs  main.rs
